on the way to CRAN again

--- a/README.Rmd
+++ b/README.Rmd
@@ -35,7 +35,7 @@ Starting with version 0.2.0, model predictions (i.e., first-passage times) are d
 
 Compared to the previous version 0.1.1, versions >0.2.0 make greater use of the S3 object system. Additionally, beginning with version 0.2.0, models use "flex_prms" objects to handle parameters across conditions.
 
-If you wish to install the older version (0.1.1), you can use:
+To install the older version (0.1.1), you can use:
 
 ```{r, eval = F}
 devtools::install_github("bucky2177/dRiftDM", ref = "0.1.1")
