--- a/vignettes/REFERENCES.bib
+++ b/vignettes/REFERENCES.bib
@@ -54,3 +54,13 @@
   year={2023},
   publisher={Elsevier}
 }
+
+@article{Janczyketal.2024,
+  title={A comment on the Revised Diffusion Model for Conflict tasks (RDMC)},
+  author={Janczyk, Markus and Mackenzie, Ian Grant and Koob, Valentin},
+  journal={Psychonomic Bulletin \& Review},
+  pages={1--15},
+  year={2024},
+  publisher={Springer}
+}
+
