--- a/vignettes/convert_dmc_parameters.Rmd
+++ b/vignettes/convert_dmc_parameters.Rmd
@@ -17,7 +17,7 @@ library(dRiftDM)
 set.seed(1014)
 ```
 
-When working with Drift-Diffusion Models (DDMs), like the Diffusion Model for Conflict Tasks [DMC; @Ulrichetal.2015], a recurring nuisance is that the size of the model's parameters depends on the time scale (seconds vs. milliseconds) and the diffusion constant. For example, in the original article by @Ulrichetal.2015, DMC was introduced on the time scale of milliseconds and with a diffusion constant of $\sigma = 4$. However, it is not uncommon for DDMs to be realized in the time scale of seconds and/or with a diffusion constant of $\sigma = 1$. 
+When working with Drift-Diffusion Models (DDMs), like the Diffusion Model for Conflict Tasks [DMC, @Ulrichetal.2015], a recurring nuisance is that the size of the model's parameters depends on the time scale (seconds vs. milliseconds) and the diffusion constant. For example, in the original article by @Ulrichetal.2015, DMC was introduced on the time scale of milliseconds and with a diffusion constant of $\sigma = 4$. However, it is not uncommon for DDMs to be realized in the time scale of seconds and/or with a diffusion constant of $\sigma = 1$. 
 
 The motivation for this vignette is to show how to convert **DMC's parameters** for different time scales and diffusion constants, thereby answering a frequently asked question [see also Appendix B in @Koobetal.2023]. While the following functions and equations only hold for DMC, the problem addressed here is a general one and partially applies to other DDMs as well. Therefore, we hope that this vignette may even be interesting to researchers that are are not specifically concerned with DMC.
 
@@ -78,7 +78,6 @@ convert_prms <- function(named_values,
                          sigma_old = 4,
                          sigma_new = 1,
                          t_from_to = "ms->s") {
-  
   # Some rough input checks
   stopifnot(is.numeric(named_values), is.character(names(named_values)))
   stopifnot(is.numeric(sigma_old), is.numeric(sigma_new))
@@ -129,17 +128,17 @@ head(quants_s) # show quantiles
 
 # now the same with new diffusion constant of 4 and time scale in milliseconds
 dmc_ms <- dmc_dm()
-prms_solve(dmc_ms)["sigma"] <- 4     # new diffusion constant
-prms_solve(dmc_ms)["t_max"] <- 3000  # 3000 ms is new max time
-prms_solve(dmc_ms)["dt"] <- 1        # 1 ms steps
+prms_solve(dmc_ms)["sigma"] <- 4 # new diffusion constant
+prms_solve(dmc_ms)["t_max"] <- 3000 # 3000 ms is new max time
+prms_solve(dmc_ms)["dt"] <- 1 # 1 ms steps
 coef(dmc_ms) <- convert_prms(
-  named_values = coef(dmc_ms),       # the previous parameters 
-  sigma_old = 1,                     # diffusion constants
+  named_values = coef(dmc_ms), # the previous parameters
+  sigma_old = 1, # diffusion constants
   sigma_new = 4,
-  t_from_to = "s->ms"                # how shall the time be scaled?
+  t_from_to = "s->ms" # how shall the time be scaled?
 )
 quants_ms <- calc_stats(dmc_ms, "quantiles") # calculate predicted quantiles
-head(quants_ms)                      # show quantiles
+head(quants_ms) # show quantiles
 ```
 Note: The transformed values in the unit of milliseconds and with a diffusion constant of 4 are similar in size to those obtained by @Ulrichetal.2015. 
 
