--- a/vignettes/customize_ddms.Rmd
+++ b/vignettes/customize_ddms.Rmd
@@ -36,7 +36,7 @@ With the  `flex_prms` object (stored as the first entry), we can specify the par
 
 With the functions stored in `comp_funs` (the fourth entry), we can control the drift rate, boundary, starting point, and non-decision time. Each function takes a set of arguments, including the model parameters, and returns a vector of values. For example, the drift rate function returns the drift rate of the diffusion model for each time step. 
 
-When deriving the model predictions, the `comp_funs` are evaluated with the currently set parameter values controlled by the `flex_prms` object. Dedicated numerical algorithms in the depths of `dRiftDM` then derive the model's predicted probability density functions of response times and choices.<!--@Vali: "separately for the possible choices"?--> It is important to emphasize this interaction of `comp_funs` with the `flex_prms` object, as you will need to ensure that the two work together smoothly. For example, a function stored in `comp_funs` might fail if it is given a parameter vector that it does not expect. Or a model might not work as expected if a function stored in `comp_funs` doesn't return code for a certain parameter. The workflow is emphasized in the following diagram:
+When deriving the model predictions, the `comp_funs` are evaluated with the currently set parameter values controlled by the `flex_prms` object. Dedicated numerical algorithms in the depths of `dRiftDM` then derive the model's predicted probability density functions of response times, separately for each possible response choice. It is important to emphasize this interaction of `comp_funs` with the `flex_prms` object, as you will need to ensure that the two work together smoothly. For example, a function stored in `comp_funs` might fail if it is given a parameter vector that it does not expect. Or a model might not work as expected if a function stored in `comp_funs` doesn't consider a certain parameter. The workflow is emphasized in the following diagram:
 
 ```{r, echo=FALSE, out.width = '90%'}
 knitr::include_graphics("evaluation_chain.png")
@@ -72,7 +72,7 @@ The **Unique Parameters** are relevant to model customization, and we can change
 
 ```{r}
 ddm_free_muc <- modify_flex_prms(
-  ddm,            # the model
+  ddm, # the model
   instr = "muc ~" # an instructions in a formula-like format
 )
 flex_prms(ddm_free_muc)
@@ -99,8 +99,7 @@ coef(ddm_free_muc)
 
 - The "special dependency" instruction: Sometimes we want a parameter in one condition to depend on another parameter in a second condition. An example of this is already shown in the `flex_prms(ddm)` output above. Here the parameter `A` in the condition `incomp` is the negative of the parameter in the condition `comp`.
 
-- The "custom parameter" instruction: Sometimes, we want to calculate a linear combination of the model parameters. An example for this is already shown in the `flex_prms(ddm)` output above. Here, we have the custom parameter `peak_l` (for "peak latency"), which is $(a-1)\cdot tau$ (the equation is not apparent from the output). 
-<!--@Vali: tau hier auschreiebn oder mit \tau? Wenn ausscheiben wüde ich die Formel fast setzen als `peak_l = (a-1)*tau`um den Bezug zu verdeutlichen-->
+- The "custom parameter" instruction: Sometimes, we want to calculate a linear combination of the model parameters. An example for this is already shown in the `flex_prms(ddm)` output above. Here, we have the custom parameter `peak_l` (for "peak latency"), which is `peak_l = (a-1)*tau` (the equation is not apparent from the output). 
 
 ## Defining New Conditions
 
@@ -119,7 +118,7 @@ Here we receive a message reminding us that all parameter values have been reset
 ```{r}
 flex_prms(ddm)
 ```
-While this may be a bit annoying in some cases, it actually makes sense because there is no way for dRifDM to know how the new conditions relate to the old ones. Consequently, we would now have to modify the underlying `flex_prms` object again to suit our needs. For example, we could restore the previous behavior for `A` in the `incomp` condition, while setting `A` to zero for the new `neutral` condition. We might also want to keep `a` again fixed for all conditions:
+While this may be a bit annoying in some cases, it actually makes sense because there is no way for dRifDM to know how the new conditions relate to the old ones. Consequently, we now have to modify the underlying `flex_prms` object again to suit our needs. For example, we could restore the previous behavior for `A` in the `incomp` condition, while setting `A` to zero for the new `neutral` condition. We might also want to keep `a` again fixed for all conditions:
 
 ```{r}
 instructions <- "
@@ -145,8 +144,8 @@ ddm <- dmc_dm() # some pre-built model
 names(comp_funs(ddm))
 ```
 
-- `mu_fun()` and `mu_int_fun()` are the drift rate and its integral. The integral is required as an entry, but is only evaluated if the user chooses the non-default method "im_zero" to derive model predictions.
-<!--@Vali: Gibt es einen Unterscied zwischen ...are the drift rate.. und dann immer ..returns the...?-->
+- `mu_fun()` and `mu_int_fun()` return the drift rate and its integral. The integral is required as an entry, but is only evaluated if the user chooses the non-default method "im_zero" to derive model predictions.
+
 - `x_fun()` returns the density for the initial distribution.
 
 - The `b_fun()` and `dt_b_fun()` functions returns the (upper) boundary and its derivative, respectively.
@@ -159,7 +158,7 @@ all_funs <- component_shelf()
 names(all_funs)
 ```
 
-The structure of each of these component functions is generally the same. The drift rate, boundary, and non-decision time functions (i.e., mu_fun, mu_int_fun, b_fun, dt_b_fun, and nt_fun<!--@Vali: in Klammern alle in `...` ?-->) must have the following declaration: 
+The structure of each of these component functions is generally the same. The drift rate, boundary, and non-decision time functions (i.e., `mu_fun`, `mu_int_fun`, `b_fun`, `dt_b_fun`, and `nt_fun`) must have the following declaration: 
 
 ```{r, eval = F}
 ... <- function(prms_model, prms_solve, t_vec, one_cond, ddm_opts) {
@@ -168,7 +167,7 @@ The structure of each of these component functions is generally the same. The dr
 ```
 
 
-- `prms_model` is a named numeric vector and is identical to a row of the **Parameter Matrix** <!--@Vali: welche ist das?-->of a model.
+- `prms_model` is a named numeric vector and is identical to a row of the **Current Parameter Matrix** stored within the `flex_prms` object of a model (see the first part of the following output).
 
 ```{r}
 flex_prms(ddm)
@@ -189,7 +188,8 @@ t_vec <- seq(0, t_max, dt)
 head(t_vec)
 tail(t_vec)
 ```
-- `one_cond` is the label of the current condition for which the model is being evaluated (i.e., a row name of the **Parameter Matrix**).<!--@Vali: hier auch-->
+
+- `one_cond` is the label of the current condition for which the model is being evaluated (i.e., a row name of the **Current Parameter Matrix**).
 
 - `ddm_opts` is taken directly from the model. It is used as a backdoor to inject arbitrary `R` objects (see the final comments below for an example)
 
@@ -218,19 +218,25 @@ x_vec <- seq(-1, 1, dx)
 
 Each starting point function must return a numeric vector of the same length as `x_vec`, providing the density values of the starting points over the evidence space.
 
-In theory, you can simply replace component functions using the replacement method for `comp_funs()`. However, at runtime, the values for the arguments `prms_model` and `one_cond` come from a row of the model's parameter matrix (i.e., from the underlying `flex_prms` object). Thus, you must ensure that each component function can handle the values supplied. Consequently, directly swapping functions only makes sense when the model parameters remain the same. The more general approach is to write a function that assembles the model, as shown below. 
+In theory, you can simply replace component functions using the replacement method for `comp_funs()`. However, at runtime, the values for the arguments `prms_model` and `one_cond` come from a row of the model's parameter matrix (i.e., from the underlying `flex_prms` object). Thus, you must ensure that each component function can handle the values supplied. Consequently, directly swapping functions only makes sense when the model parameters remain the same. The more general approach is to write a function that assembles the model.
 
-## Example: Custom Drift Rate
+The following sections provide examples for a custom ...
+
+- ... drift rate (Example 1)
+- ... starting point (Example 2)
+- ... boundary (Example 3)
+- ... non-decision time (Example 4)
+
+## Example 1: Custom Drift Rate
 
 Assume that we want a model with the following custom drift rate: 
-<!--@Vali im Code: mua und muc schreiben als\mu_a und \mu_c oder in texttt{} So sieht das irgendwie komisch aus-->
 $$\mu(t) = \left\{ 
   \begin{array}{ c l }
-    muc + mua & \quad \textrm{for compatible conditions} \\
-    muc - mua & \quad \textrm{for incompatible conditions}
+    \mu_c + \mu_a & \quad \textrm{for compatible conditions} \\
+    \mu_c - \mu_a & \quad \textrm{for incompatible conditions}
   \end{array}
 \right.$$
-Thus, in compatible conditions, the drift rate at each time step is the sum of the two drift rates $muc$ and $mua$, while in incompatible conditions it is their difference. 
+Thus, in compatible conditions, the drift rate at each time step is the sum of the two drift rates $\mu_c$ and $\mu_a$, while in incompatible conditions it is their difference. 
 
 First, we write the corresponding drift rate function like this: 
 
@@ -250,7 +256,7 @@ cust_mu <- function(prms_model, prms_solve, t_vec, one_cond, ddm_opts) {
 Within this function, we first extract the model parameters relevant to the calculation of the drift rate. Then, depending on an auxiliary parameter `sign`, we sum both parameters and return the vector of drift rates for each time step. 
 
 
-The next step is to create a function that assembles the custom model by calling dRiftDM's backbone function `drift_dm()`. Here we define vectors for all model parameters and conditions. We then assemble the model using not only our custom drift rate function, but also pre-built functions for the boundary, start point, and non-decision time.^[It would also be possible to omit the pre-built functions for the boundary, start point, and non-decision time. In this case dRiftDM will fall back to default settings, see also the documentation for `comp\_funs()`]<!--@Vali: Der Unterstrich in der Fußnote wird mit dem \ angezeigt.. soll das so?--> Finally, we ensure that the auxiliary sign parameter works as intended by modifying the parameter settings with `modify_flex_prms()`:
+The next step is to create a function that assembles the custom model by calling dRiftDM's backbone function `drift_dm()`. Here we define vectors for all model parameters and conditions. We then assemble the model using not only our custom drift rate function, but also pre-built functions for the boundary, start point, and non-decision time.^[It would also be possible to omit the pre-built functions for the boundary, start point, and non-decision time. In this case dRiftDM will fall back to default settings, see also the documentation for `comp_funs()`] Finally, we ensure that the auxiliary sign parameter works as intended by modifying the parameter settings with `modify_flex_prms()`:
 
 ```{r}
 cust_model <- function() {
@@ -259,7 +265,7 @@ cust_model <- function() {
     muc = 3, mua = 1, sign = 1, # parameters for the custom drift rate function
     b = .6, # parameter for a time-independent boundary "b"
     non_dec = .2 # parameter for a non-decision time "non_dec"
-  ) 
+  )
   conds <- c("comp", "incomp")
 
   # get access to pre-built component functions
@@ -270,13 +276,13 @@ cust_model <- function() {
     prms_model = prms_model,
     conds = conds,
     subclass = "my_custom_model",
-    mu_fun = cust_mu,               # your custom drift rate function
-    mu_int_fun = comps$dummy_t,     # a dummy function, because no integral 
-                                    # of the drift rate is required per default
-    x_fun = comps$x_dirac_0,        # pre-built dirac delta on zero for the starting point
-    b_fun = comps$b_constant,       # pre-built time-independent boundary with parameter b
+    mu_fun = cust_mu, # your custom drift rate function
+    mu_int_fun = comps$dummy_t, # a dummy function, because no integral
+    # of the drift rate is required per default
+    x_fun = comps$x_dirac_0, # pre-built dirac delta on zero for the starting point
+    b_fun = comps$b_constant, # pre-built time-independent boundary with parameter b
     dt_b_fun = comps$dt_b_constant, # pre-built derivative of the boundary
-    nt_fun = comps$nt_constant      # pre-built non-decision time with parameter non_dec
+    nt_fun = comps$nt_constant # pre-built non-decision time with parameter non_dec
   )
 
   # modify the flex_prms object to achieve the desired behavior of 'sign'
@@ -327,19 +333,19 @@ cust_model <- function() {
     prms_model = prms_model,
     conds = conds,
     subclass = "my_custom_model",
-    mu_fun = cust_mu,               # custom defined
-    mu_int_fun = cust_mu_int,       # to test :)
-    x_fun = comps$x_dirac_0,        # dirac delta on zero for the starting point
-    b_fun = comps$b_constant,       # time-independent boundary with parameter b
+    mu_fun = cust_mu, # custom defined
+    mu_int_fun = cust_mu_int, # to test :)
+    x_fun = comps$x_dirac_0, # dirac delta on zero for the starting point
+    b_fun = comps$b_constant, # time-independent boundary with parameter b
     dt_b_fun = comps$dt_b_constant, # respective derivative of the boundary
-    nt_fun = comps$nt_constant      # non-decision time with parameter non_dec
+    nt_fun = comps$nt_constant # non-decision time with parameter non_dec
   )
 
   # modify the flex_prms object to achieve the desired behavior of 'sign'
   # -> don't consider 'sign' a free parameter to estimate and set it to -1
   # for incompatible conditions
   ddm <- modify_flex_prms(
-    ddm, 
+    ddm,
     instr = "sign <!>
              sign ~ incomp => -1"
   )
@@ -353,7 +359,7 @@ solver(ddm) <- "im_zero"
 points(re_evaluate_model(ddm)$pdfs$comp$pdf_u, col = "red", ty = "l")
 ```
 
-## Example: Custom Starting Point (Distribution)
+## Example 2: Custom Starting Point (Distribution)
 
 Suppose we want a model where the starting point of the diffusion process is controlled by a parameter $z$. If $z = 0.5$, the starting point is zero. If $0.5 < z < 1$, the starting point is closer to the upper boundary. If $0 < z < 0.5$, the start point is closer to the lower boundary. Such a custom starting point distribution might look like this: 
 
@@ -378,12 +384,12 @@ Then we write a function that assembles the custom model:
 cust_model <- function() {
   # define all parameters and conditions
   prms_model <- c(
-    z = 0.75,     # parameter for the custom starting point
-    muc = 4,      # parameter for a time-independent drift rate "muc"
-    b = .6,       # parameter for a time-independent boundary "b"
-    non_dec = .2  # parameter for a non-decision time "non_dec"
-  ) 
-  
+    z = .75, # parameter for the custom starting point
+    muc = 4, # parameter for a time-independent drift rate "muc"
+    b = .6, # parameter for a time-independent boundary "b"
+    non_dec = .2 # parameter for a non-decision time "non_dec"
+  )
+
   # each model must have a condition (in this example it is not relevant, so we just call it "foo")
   conds <- c("foo")
 
@@ -395,12 +401,12 @@ cust_model <- function() {
     prms_model = prms_model,
     conds = conds,
     subclass = "my_custom_model",
-    mu_fun = comps$mu_constant,         # time-independent drift rate with parameter muc
+    mu_fun = comps$mu_constant, # time-independent drift rate with parameter muc
     mu_int_fun = comps$mu_int_constant, # respective integral of the drift rate
-    x_fun = cust_x,                     # custom starting point function with parameter z
-    b_fun = comps$b_constant,           # time-independent boundary with parameter b
-    dt_b_fun = comps$dt_b_constant,     # respective derivative of the boundary
-    nt_fun = comps$nt_constant          # non-decision time with parameter non_dec
+    x_fun = cust_x, # custom starting point function with parameter z
+    b_fun = comps$b_constant, # time-independent boundary with parameter b
+    dt_b_fun = comps$dt_b_constant, # respective derivative of the boundary
+    nt_fun = comps$nt_constant # non-decision time with parameter non_dec
   )
   return(ddm)
 }
@@ -408,7 +414,7 @@ cust_model <- function() {
 ddm <- cust_model()
 ```
 
-## Example: Custom Boundary
+## Example 3: Custom Boundary
 
 Remark: This example shows a reimplementation of the already pre-built `b_hyperbol()` and `dt_b_hyperbol()` component functions (see `component_shelf()`.
 
@@ -446,20 +452,19 @@ cust_dt_b <- function(prms_model, prms_solve, t_vec, one_cond, ddm_opts) {
 ```
 
 
-Then we write a function that assembles the custom model:
-<!--@Vali: im COde hast du manchmal Werte ohen Führungsnull und manchmal mit, vielleicht
-noch einheitlih machen?-->
+Then we write a function that assembles the custom model;
+
 
 ```{r}
 cust_model <- function() {
   # define all parameters and conditions
   prms_model <- c(
-    b0 = 0.6,      # parameters for the custom boundary
-    kappa = 0.5,
-    t05 = 0.15, 
-    muc = 4,       # parameter for a time-independent drift rate "muc"
-    non_dec = .2   # parameter for a non-decision time "non_dec"
-  ) 
+    b0 = .6, # parameters for the custom boundary
+    kappa = .5,
+    t05 = .15,
+    muc = 4, # parameter for a time-independent drift rate "muc"
+    non_dec = .2 # parameter for a non-decision time "non_dec"
+  )
 
   # each model must have a condition (in this example it is not relevant, so we just call it "foo")
   conds <- c("foo")
@@ -472,12 +477,12 @@ cust_model <- function() {
     prms_model = prms_model,
     conds = conds,
     subclass = "my_custom_model",
-    mu_fun = comps$mu_constant,         # time-independent drift rate with parameter muc
+    mu_fun = comps$mu_constant, # time-independent drift rate with parameter muc
     mu_int_fun = comps$mu_int_constant, # respective integral of the drift rate
-    x_fun = comps$x_dirac_0,            # dirac delta on zero
-    b_fun = cust_b,                     # custom time-dependent boundary
-    dt_b_fun = cust_dt_b,               # respective derivative of the boundary
-    nt_fun = comps$nt_constant          # non-decision time with parameter non_dec
+    x_fun = comps$x_dirac_0, # dirac delta on zero
+    b_fun = cust_b, # custom time-dependent boundary
+    dt_b_fun = cust_dt_b, # respective derivative of the boundary
+    nt_fun = comps$nt_constant # non-decision time with parameter non_dec
   )
   return(ddm)
 }
@@ -491,19 +496,17 @@ plot(
 )
 ```
 
-## Example: Custom Non-Decision Time
-<!--@Vali: Man könnte die Examples noch durchnummerieren? Und dann oben einmal erwänen, was alles kommt und eben verweisen? "The following section provides examples for a custom drift rate (Example 1), ..."?-->
+## Example 4: Custom Non-Decision Time
 
 Remark: This example shows a reimplementation of the already pre-built `nt_uniform()` component function (see `component_shelf()`.
 
 Suppose we want a uniform non-decision time distribution with parameters `non_dec` and `range_non_dec`: 
 ```{r}
 cust_nt <- function(prms_model, prms_solve, t_vec, one_cond, ddm_opts) {
-  
   # get the relevant parameters
   non_dec <- prms_model[["non_dec"]]
   range_non_dec <- prms_model[["range_non_dec"]]
-  
+
   # get the settings for the time space discretization
   t_max <- prms_solve[["t_max"]]
   dt <- prms_solve[["dt"]]
@@ -521,11 +524,11 @@ Then we write a function that assembles the custom model:
 cust_model <- function() {
   # define all parameters and conditions
   prms_model <- c(
-    non_dec = .2,         # parameters for the custom non-decision time
-    range_non_dec = 0.05, 
-    muc = 4,              # parameter for a time-independent drift rate
-    b = .6                # parameter for a time-independent boundary
-  ) 
+    non_dec = .2, # parameters for the custom non-decision time
+    range_non_dec = .05,
+    muc = 4, # parameter for a time-independent drift rate
+    b = .6 # parameter for a time-independent boundary
+  )
 
   # each model must have a condition (in this example it is not relevant, so we just call it "foo")
   conds <- c("foo")
@@ -538,12 +541,12 @@ cust_model <- function() {
     prms_model = prms_model,
     conds = conds,
     subclass = "my_custom_model",
-    mu_fun = comps$mu_constant,         # time-independent drift rate with parameter muc
+    mu_fun = comps$mu_constant, # time-independent drift rate with parameter muc
     mu_int_fun = comps$mu_int_constant, # respective integral of the drift rate
-    x_fun = comps$x_dirac_0,            # dirac delta on zero
-    b_fun = comps$b_constant,           # time-independent boundary b
-    dt_b_fun = comps$dt_b_constant,     # respective derivative of the boundary
-    nt_fun = cust_nt                    # custom non-decision time 
+    x_fun = comps$x_dirac_0, # dirac delta on zero
+    b_fun = comps$b_constant, # time-independent boundary b
+    dt_b_fun = comps$dt_b_constant, # respective derivative of the boundary
+    nt_fun = cust_nt # custom non-decision time
   )
   return(ddm)
 }
@@ -581,7 +584,7 @@ Alternatively, you can plot the returned values of each component function by pa
 plot(ddm, col = c("green", "red"))
 ```
 ```{r, eval = T, echo = F}
-plot(ddm, mfrow = c(1,1), col = c("green", "red")) # otherwise the vignette won't build
+plot(ddm, mfrow = c(1, 1), col = c("green", "red")) # otherwise the vignette won't build
 ```
 
 **What if I need to access an arbitrary R object within a component function?** Since each component function is called by `dRiftDM` at runtime, users don't have direct control over the values passed as arguments. However, we have implemented a backdoor via the `ddm_opts` argument of each component function. This allows you to inject arbitrary R objects and evaluate them at runtime if necessary. The following (not very creative) example shows how to do this. 
@@ -595,13 +598,13 @@ cust_mu <- function(prms_model, prms_solve, t_vec, one_cond, ddm_opts) {
   return(muc)
 }
 
-a_model <- ratcliff_dm()                  # a dummy model for demonstration purpose
-ddm_opts(a_model) <- "Hello World"        # attach "Hello World" to the model
+a_model <- ratcliff_dm() # a dummy model for demonstration purpose
+ddm_opts(a_model) <- "Hello World" # attach "Hello World" to the model
 comp_funs(a_model)[["mu_fun"]] <- cust_mu # swap in the custom component function
 
-# evaluate the model (which will evaluate the custom drift rate function with the user-defined R 
+# evaluate the model (which will evaluate the custom drift rate function with the user-defined R
 # object for ddm_opts)
-a_model <- re_evaluate_model(a_model) 
+a_model <- re_evaluate_model(a_model)
 ```
 
 Because R is dynamic, we can attach arbitrary R objects and even functions to the model via `ddm_opts` and thereby make them available within our custom component functions.
