--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -43,3 +43,28 @@
   publisher={American Psychological Association},
   doi={10.1037/0033-295X.85.2.59}
 }
+
+
+@article{EvansAnnis2019,
+  title={Thermodynamic integration via differential evolution: A method for estimating marginal likelihoods},
+  author={Evans, Nathan J and Annis, Jeffrey},
+  journal={Behavior Research Methods},
+  volume={51},
+  pages={930--947},
+  year={2019},
+  publisher={Springer},
+  doi={10.3758/s13428-018-1172-y}
+}
+
+
+@article{Turneretal.2013,
+  title={A method for efficiently sampling from distributions with correlated dimensions.},
+  author={Turner, Brandon M and Sederberg, Per B and Brown, Scott D and Steyvers, Mark},
+  journal={Psychological Methods},
+  volume={18},
+  number={3},
+  pages={368--384},
+  year={2013},
+  publisher={American Psychological Association},
+  doi={10.1037/a0032222}
+}
